# pz11-notes-api/cmd/api/main.go
@@ -3,9 +3,13 @@
 // @title           Notes API
 // @version         1.0
 // @description     Учебный REST API для заметок (CRUD).
-// @contact.name    Backend Course
+// @contact.name    Максим Свидовский
 // @contact.email   example@university.ru
 // @BasePath        /api/v1
+// @securityDefinitions.apikey  BearerAuth
+// @in                          header
+// @name                        Authorization
+// @description                 Токен доступа в формате: "Bearer {token}"
 package main
 
 import (
@@ -25,5 +29,6 @@ func main() {
 
 	log.Println("Server started at :8080")
 	log.Println("Swagger UI: http://localhost:8080/swagger/index.html")
+	log.Println("ReDoc: http://localhost:8080/redoc")
 	log.Fatal(http.ListenAndServe(":8080", r))
 }
